fix header title left alignment on big screens, add margin between image title and description

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -121,8 +121,9 @@ header.main
     color $body-color
     font-size 5em
     margin -2.7em auto 0
-    max-width 80%
+    max-width 740px
     text-align left
+    width 90%
 
   div.description
     display block
@@ -204,6 +205,7 @@ section
 
 div.image-container
   h2
+    margin 0 0 .5em
     font-style italic
 
   div.img
